# EnergyFlow

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  EMD Demo.ipynb  EnergyFlow Demo.ipynb  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  run_all_examples.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  publish.yml  test-energyflow.yml  upload-wheels.yml
binder/: apt.txt  download_CMS2011AJets.py  ef_ipython_kernel_config.py  postBuild  requirements.txt  start
data/: multigraphs_d-le-7_ve-numpy.npz
demos/: EFM Demo.ipynb  EFN Regression Demo.ipynb  EMD Demo.ipynb  EnergyFlow Demo.ipynb  MOD Jet Demo.ipynb  count_leafless_multigraphs_nauty.py  modplot.py
docs/: 404.html  CNAME  _config.yml  index.html  search.html  sitemap.xml
docs/css/: eftheme.css
docs/demo/: index.html
docs/demos/: index.html
docs/docs/algorithms/: index.html
docs/docs/archs/: index.html
docs/docs/datasets/: index.html
docs/docs/efm/: index.html
docs/docs/efp/: index.html
docs/docs/efps/: index.html
docs/docs/emd/: index.html
docs/docs/measure/: index.html
docs/docs/measures/: index.html
docs/docs/multigraphs/: index.html
docs/docs/obs/: index.html
docs/docs/polynomials/: index.html
docs/docs/utils/: index.html
docs/efp/: index.html
docs/efpset/: index.html
docs/examples/: index.html
docs/faq/: index.html
docs/faqs/: index.html
docs/generation/: index.html
docs/installation/: index.html
docs/intro/efpintro/: index.html
docs/intro/measures/: index.html
docs/js/: eftheme.js
docs/news/: index.html
docs/releases/: index.html
docs/search/: search_index.json
docs/tutorial/: index.html
energyflow/: __init__.py  base.py  efm.py  efp.py  efpbase.py  emd.py  gen.py  measure.py  obs.py  test_base.py
energyflow/algorithms/: __init__.py  einsumfunc.py  integer_partitions.py  test_algorithms.py  ve.py
energyflow/archs/: __init__.py  archbase.py  cnn.py  dnn.py  efn.py  linear.py  utils.py
energyflow/data/: CMS2011AJets.json  M_threshs_d_le_10.npy  create_default_efps.py  efps_d_le_8.npz  efps_d_le_9.npz  events.npy  multigraphs_d<=7_numpy.npz  qg_jets.json  ten_events_massless.npy  ten_random_events.npy  zjets_delphes.json
energyflow/datasets/: __init__.py  mod.py  qg_jets.py  qg_nsubs.py  zjets_delphes.py
energyflow/efp/: __init__.py  debug.ipynb  efp_base.py  efp_gen.py  ptk_ve.py  ve.py
energyflow/efps/: __init__.py  base.py  efp.py  efpset.py  test_efps.py
energyflow/multigraphs/: __init__.py  gen.py  test_multigraphs.py
energyflow/observables/: __init__.py  base.py  efm.py  efp.py  efpbase.py  efpset.py  test_observables.py
energyflow/polynomials/: __init__.py  base.py  efp.py  efpset.py  test_polynomials.py
energyflow/tests/: test_algorithms.py  test_archs.py  test_efm.py  test_efp.py  test_efps.py  test_emd.py  test_gen.py  test_measure.py  test_obs.py  test_pyfjcore.py  test_utils.py
energyflow/utils/: __init__.py  arch_utils.py  data_utils.py  event_utils.py  events.py  fastjet_utils.py  generic_utils.py  graph.py  graph_utils.py  helpers.py  igraph.py  image_utils.py  measure.py  particle_utils.py  particles.py  path.py  random_utils.py  test_utils.py
examples/: animation_example.py  cnn_example.py  dnn_example.py  efn_example.ipynb  efn_example.py  efn_multiple_phis.py  efn_point_cloud_dataset_example.py  efn_regression_example.py  efn_tfdataset_example.py  efp_example.py  pfn_concat_example.py  pfn_example.py  pfn_multiple_phis.py  pfn_point_cloud_dataset_example.py  pfn_tfdataset_example.py
include/: test.hh
mkdocs/: autogen.py  mkdocs.yml
mkdocs/eftheme/: main.html
mkdocs/sources/: demos.md  examples.md  faqs.md  index.md  installation.md  news.md  releases.md
mkdocs/sources/css/: eftheme.css
mkdocs/sources/docs/: archs.md  datasets.md  efm.md  efp.md  emd.md  gen.md  measures.md  obs.md  utils.md
mkdocs/sources/js/: eftheme.js
mkdocs/sources/templates/: examples_template.md  index_template.md  releases_template.md
src/: taco_test.cc
src/energyflow/: base.py  emd.py  obs.py
src/energyflow/algorithms/: ve.py
src/energyflow/archs/: __init__.py  efn.py  linear.py
src/energyflow/data/: CMS2011AJets.json  ZjetsDelphes.json
src/energyflow/datasets/: __init__.py  qg_nsubs.py
src/energyflow/utils/: data_utils.py  particle_utils.py
tests/: test_algorithms.py  test_archs.py  test_efm.py  test_efp.py  test_emd.py  test_energyflow.py  test_measure.py  test_obs.py  test_utils.py
