[metadata]

name = EnergyFlow
description = Python package for the Energy Flow suite of particle physics tools
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
license = GPL-3.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://energyflow.network
project_urls = 
    Source Code = https://github.com/pkomiske/EnergyFlow
    Issues = https://github.com/pkomiske/EnergyFlow/issues
keywords =
    energy flow
    energyflow
    physics
    jets
    correlator
    multigraph
    polynomial
    EFP
    EFN
    EFM
    PFN
    EMD
    Wasserstein
    Energy Flow Polynomial
    Energy Flow Moment
    Energy Flow Network
    Particle Flow Network
    Earth Mover Distance
    Deep Sets
    architecture
    neural network
    metric
    collider
    CMS
    open
    Open Data
    MOD
    substructure

[options]

packages = find:

python_requires =
    >= 2.7

install_requires =
    numpy >= 1.12.0
    six >= 1.10.0
    h5py >= 2.9.0
    wasserstein >= 0.3.3
    pyfjcore >= 0.2.0

setup_requires =
    pytest-runner

[options.package_data]

* =
    data/*

[options.extras_require]

archs =
    scikit-learn
    tensorflow >= 2.0.0

emd =
    pot

examples =
    matplotlib
    energyflow[archs]

generation =
    python-igraph
    python-igraph == 0.8.3; python_version < '3.5'

tests =
    energyflow[archs]
    energyflow[emd]
    energyflow[generation]
    pytest

all =
    energyflow[tests]

[bdist_wheel]

universal = 1
