[metadata]

name = EnergyFlow
description = Python package for the Energy Flow suite of particle physics tools

author = Patrick T. Komiske III
author_email = pkomiske@mit.edu

license = GPL-3.0
license_file = LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

url = https://energyflow.network
project_urls = 
    Source Code = https://github.com/pkomiske/EnergyFlow
    Issues = https://github.com/pkomiske/EnergyFlow/issues

keywords =
    energy flow
    energyflow
    physics
    jets
    correlator
    multigraph
    polynomial
    EFP
    EFN
    EFM
    PFN
    EMD
    Wasserstein
    Energy Flow Polynomial
    Energy Flow Moment
    Energy Flow Network
    Particle Flow Network
    Earth Mover Distance
    Deep Sets
    architecture
    neural network
    metric
    collider
    CMS
    open
    Open Data
    MOD
    substructure

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]

packages = find:

python_requires =
    >= 3.7

install_requires =
    numpy >= 1.12.0
    six
    h5py >= 2.9.0
    wasserstein >= 1.0.1

setup_requires=
    pytest-runner

[options.package_data]

* =
    data/*

[options.extras_require]

generation =
    python-igraph

examples =
    tensorflow > 2.0.0
    scikit-learn
    matplotlib

archs =
    tensorflow > 2.0.0
    scikit-learn

tests =
    pot >= 0.8.0
    pytest
    python-igraph
    python-igraph == 0.8.3; python_version=='2.7'
    tensorflow > 2.0.0
    scikit-learn

all =
    python-igraph
    tensorflow > 2.0.0
    scikit-learn

[bdist_wheel]

universal = 1

[aliases]

test = pytest
